rendering roles information

--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -1,36 +1,12 @@
 .App {
   text-align: center;
+  position: relative;
+  width: 100vw;
+  height: 60vh;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 .headShot {
 /* 
@@ -39,10 +15,14 @@
   -o-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   transform: rotate(90deg); */
-  position: absolute;
+  /* position: absolute; */
   left: 0px;
   top: 0px; 
   z-index: -10;
   width: 100vw;
   height: 100vh;
+}
+
+.testing {
+  display: block;
 }
