--- a/portfolio/src/css/hamburger.css
+++ b/portfolio/src/css/hamburger.css
@@ -7,7 +7,7 @@
     transition-timing-function: linear;
     font: inherit;
     color: inherit;
-    /* text-transform: none; */
+    text-transform: none;
     background-color: transparent;
     border: 0;
     margin: 0;
@@ -91,6 +91,16 @@
       transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
   }
   
+  
+.menu-text--active {
+  animation: open 300ms;
+  animation-fill-mode: both;
+  animation-delay: 200ms;
+  position: absolute;
+}
+.menu-text--inactive {
+  display:none;
+}
   
   @keyframes open {
     0% {
