--- a/portfolio/src/css/hamburger.css
+++ b/portfolio/src/css/hamburger.css
@@ -8,11 +8,12 @@
     font: inherit;
     color: inherit;
     text-transform: none;
-    background-color: transparent;
+    background-color: #333333;
     border: 0;
     margin: 0;
     overflow: visible;
     z-index: 20;
+    border-radius: 5px;
   }
   .hamburger:hover {
     opacity: 0.7;
@@ -35,7 +36,7 @@
   .hamburger-inner::after {
     width: 40px;
     height: 4px;
-    background-color: #000;
+    background-color: white;
     border-radius: 4px;
     position: absolute;
     transition-property: transform;
@@ -97,6 +98,9 @@
   animation-fill-mode: both;
   animation-delay: 200ms;
   position: absolute;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 .menu-text--inactive {
   display:none;
