--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -44,6 +44,17 @@
 
 .experience-tabs {
   border: 1px solid yellow;
+  margin: 0 auto;
+  max-width: 1024px;
+}
+
+.role {
+  display: flex;
+}
+.company-img {
+  width: 400px;
+  height: 400px;
+  border-radius:20px;
 }
 
 .project-tabs {
