--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -67,14 +67,16 @@
 .role {
   display: flex;
   margin: 20px 0;
-  display: flex;
+
 }
+
+
 .company-img {
   width: 250px;
   height: 250px;
   border-radius:20px;
   box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2), 0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
-
+  
 }
 
 .company-info-desc{
@@ -106,4 +108,9 @@
 .social-media {
   width: 200px;
   height: 200px;
+}
+
+img:nth-of-type(even) {
+  float:right;
+  border: 5px solid red;
 }
