--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -75,11 +75,27 @@ table {
 
 .navMenu {
   /* border: 1px solid orange; */
-  display: flex;
+  /* display: flex; */
   position: fixed;
   z-index: 20;
-  
+
 }
+
+.menu-text--active {
+  width: 100vw;
+  height: 100px;
+  display: flex; 
+  flex-direction: column;
+  background-color: #FFFF;
+  text-decoration: none;
+}
+
+.navLinks{
+  text-decoration: none;
+  color:#A3a3a3;
+  padding: 5px;
+}
+
 
 .title {
   /* border: 1px solid blue; */
