--- a/portfolio/src/css/hamburger.css
+++ b/portfolio/src/css/hamburger.css
@@ -14,10 +14,15 @@
     overflow: visible;
     z-index: 20;
     border-radius: 5px;
+    
   }
   .hamburger:hover {
     opacity: 0.7;
+    
   }
+
+  
+ 
   
   .hamburger-box {
     width: 40px;
@@ -30,6 +35,7 @@
     display: block;
     top: 50%;
     margin-top: -2px;
+    
   }
   .hamburger-inner,
   .hamburger-inner::before,
@@ -43,18 +49,29 @@
     transition-duration: 0.15s;
     transition-timing-function: ease;
   }
+
+
   .hamburger-inner::before,
   .hamburger-inner::after {
     content: "";
     display: block;
+    background-color: #FEFEFE;
+    box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2), 0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
+    color: #333333;
+  
   }
   .hamburger-inner::before {
     top: -10px;
   }
   .hamburger-inner::after {
     bottom: -10px;
+     background-color: #FEFEFE;
+      box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2), 0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
+      color: #333333;
+    
   }
-  
+
+
   .hamburger--arrow.is-active .hamburger-inner::before {
     transform: translate3d(-8px, 0, 0) rotate(-45deg) scale(0.7, 1);
   }
@@ -90,6 +107,7 @@
     transform: rotate(-90deg);
     transition: bottom 0.1s ease-out,
       transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
+
   }
   
   
