--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -58,7 +58,7 @@ html {
 .App {
   text-align: center;
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 60vh;
 }
 
@@ -186,6 +186,8 @@ html {
 .company-info-desc{
   text-align: left;
   margin: 0 30px;
+  display: flex;
+  flex-direction: column;
 }
 
 .role-title{ 
@@ -199,19 +201,21 @@ html {
 }
 
 .description {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
+  line-height: 1.5;
 }
 
 .project-tabs h1 {
   /* border: 1px solid green; */
   font-size: 2.8rem;
-  margin: 20px;
+  margin: 20px 0 0 0;
   
 }
 
 .project-snippets {
   display: flex;
   justify-content: space-evenly;
+  margin: 20px 0 40px 0;
 }
 
 .project-snippet {
@@ -226,7 +230,7 @@ html {
 
 .footer {
   /* border: 1px solid red; */
-  margin: 20px 0;  
+  margin: 20px 0 0 0;  
   background-color: #1A202B;
   padding: 20px 0;
   display: flex;
@@ -234,9 +238,12 @@ html {
 }
 
 .footer-quote h1 {
+  font-family: 'Lato Light', sans-serif;
   font-size: 2.5rem;
+  font-weight: lighter;
   margin: 20px 0;
   color: white;
+  text-align: right;
 }
 
 .contact-info {
@@ -245,8 +252,8 @@ html {
 }
 
 .social-media {
-  width: 100px;
-  height: 100px;
+  width: 130px;
+  height: 130px;
   border-radius: 20px;
   align-items: center;
   margin: 0 25px;
@@ -266,3 +273,5 @@ a .company-img .odd {
   order: 20;
 
 }
+
+
