now mobile phone friendly

--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -3,52 +3,134 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 a {
   text-decoration: none;
+  box-sizing: border-box;
 }
 
 html {
@@ -62,15 +144,14 @@ html {
   height: 60vh;
 }
 
-.portfolio-container{
+.portfolio-container {
   max-width: 1024px;
   margin: 0 auto;
 }
 
-
 .headShot {
   left: 0px;
-  top: 0px; 
+  top: 0px;
   z-index: -10;
   width: 100vw;
   height: 100vh;
@@ -85,36 +166,28 @@ html {
   /* display: flex; */
   position: fixed;
   z-index: 20;
-
-
-
 }
 
-
-
-.nav-subContainer{
+.nav-subContainer {
   display: flex;
   width: 150px;
   flex-direction: column;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
 }
 
-.navLinks{
+.navLinks {
   text-decoration: none;
-  color:#A3a3a3;
+  color: #a3a3a3;
   padding: 5px;
-  font-size:2.0rem;
-  
+  font-size: 2rem;
 }
-
 
 .title {
   /* border: 1px solid blue; */
 }
 
 .parallax-headshot {
-  
   min-height: 500px;
   background-attachment: fixed;
   background-position: center;
@@ -125,25 +198,24 @@ html {
   justify-content: center;
 }
 
-.profile-name{
+.profile-name {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: 0 auto;
-  background-color:white;
+  background-color: white;
   opacity: 0.8;
   width: 300px;
   height: 250px;
-  border-radius: 15px; 
+  border-radius: 15px;
 }
 
-.profile-name h1{
+.profile-name h1 {
   color: black;
   font-size: 1.5rem;
-  
 }
-.profile-name h2{
+.profile-name h2 {
   color: black;
   font-size: 3.4rem;
 }
@@ -166,38 +238,32 @@ html {
   display: flex;
   /* justify-content: space-between; */
   margin: 20px 0;
-  
-
 }
-
 
 .company-img {
   width: 250px;
   height: 250px;
-  border-radius:20px;
+  border-radius: 20px;
   box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2), 0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
-  
 }
 
-.experienceLinks{
-  
+.experienceLinks {
 }
 
-.company-info-desc{
+.company-info-desc {
   text-align: left;
   margin: 0 30px;
   display: flex;
   flex-direction: column;
 }
 
-.role-title{ 
+.role-title {
   font-size: 2.5rem;
 }
 
 .location {
   font-size: 1.4rem;
   margin: 10px 0;
-
 }
 
 .description {
@@ -209,7 +275,6 @@ html {
   /* border: 1px solid green; */
   font-size: 2.8rem;
   margin: 20px 0 0 0;
-  
 }
 
 .project-snippets {
@@ -225,13 +290,10 @@ html {
   box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2), 0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
 }
 
-
-
-
 .footer {
   /* border: 1px solid red; */
-  margin: 20px 0 0 0;  
-  background-color: #1A202B;
+  margin: 20px 0 0 0;
+  background-color: #1a202b;
   padding: 20px 0;
   display: flex;
   justify-content: center;
@@ -257,21 +319,54 @@ html {
   border-radius: 20px;
   align-items: center;
   margin: 0 25px;
-  /* justify-content: space-between; */
-  /* padding: 20px 0; */
-  /* box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2), 0 1px 0.5px 0 rgba(0, 0, 0, 0.19); */
-}
-/* 
-a .company-img .odd {
-  display;
-} */
-
-.odd {
-  /* float:right; */
-  /* border: 5px solid red; */
-
-  order: 20;
-
 }
 
+@media (max-width: 768px){
+  .project-snippets {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 0 40px 0;
+  }
 
+  .project-snippet {
+    margin: 10px 0;
+    width: 350px;
+    height: 350px;
+  }
+  
+  .role {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 0;
+  }
+
+  .company-img {
+  width: 350px;
+  height: 350px;
+  border-radius: 20px;
+  box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2), 0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
+  margin: 0 0 10px 0;
+  }
+
+  .company-info {
+    width: 400px;
+    margin: 0 auto;
+  }
+
+  .footer {
+    /* border: 1px solid red; */
+    flex-direction: column;
+  }
+
+  
+.footer-quote h1 {
+  text-align: center;
+}
+
+.contact-info {
+  display: flex;
+  justify-content: center;
+}
+
+}
