--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -180,7 +180,7 @@ html {
   text-decoration: none;
   color: #a3a3a3;
   padding: 5px;
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 
 .title {
@@ -213,11 +213,13 @@ html {
 
 .profile-name h1 {
   color: black;
-  font-size: 1.5rem;
+  font-size: 2.9rem;
+  font-family: 'Lato Light', sans-serif; 
 }
 .profile-name h2 {
   color: black;
   font-size: 3.4rem;
+  font-family: 'Lato Light', sans-serif; 
 }
 
 .quotes {
@@ -232,12 +234,16 @@ html {
 
 .experience-tabs h1 {
   font-size: 3.5rem;
+  
+  font-family: 'Lato Light', sans-serif; 
 }
 
 .role {
   display: flex;
   /* justify-content: space-between; */
   margin: 20px 0;
+  
+  font-family: 'Lato Light', sans-serif; 
 }
 
 .company-img {
@@ -273,8 +279,9 @@ html {
 
 .project-tabs h1 {
   /* border: 1px solid green; */
-  font-size: 2.8rem;
+  font-size: 3.2rem;
   margin: 20px 0 0 0;
+  font-family: 'Lato Light', sans-serif; 
 }
 
 .project-snippets {
@@ -301,7 +308,7 @@ html {
 
 .footer-quote h1 {
   font-family: 'Lato Light', sans-serif;
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   font-weight: lighter;
   margin: 20px 0;
   color: white;
@@ -321,7 +328,28 @@ html {
   margin: 0 25px;
 }
 
-@media (max-width: 768px){
+@media (max-width: 1100px) {
+  .portfolio-container {
+    padding: 0 20px;
+  }
+
+  
+.project-snippets {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px 0 40px 0;
+  /* justify-content: flex-start; */
+}
+
+.project-snippet {
+  margin: 10px 0;
+  
+}
+
+
+}
+
+@media (max-width: 768px) {
   .project-snippets {
     display: flex;
     flex-direction: column;
@@ -334,7 +362,7 @@ html {
     width: 350px;
     height: 350px;
   }
-  
+
   .role {
     display: flex;
     flex-direction: column;
@@ -342,11 +370,12 @@ html {
   }
 
   .company-img {
-  width: 350px;
-  height: 350px;
-  border-radius: 20px;
-  box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2), 0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
-  margin: 0 0 10px 0;
+    width: 350px;
+    height: 350px;
+    border-radius: 20px;
+    box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2),
+      0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
+    margin: 0 0 10px 0;
   }
 
   .company-info {
@@ -359,14 +388,12 @@ html {
     flex-direction: column;
   }
 
-  
-.footer-quote h1 {
-  text-align: center;
-}
+  .footer-quote h1 {
+    text-align: center;
+  }
 
-.contact-info {
-  display: flex;
-  justify-content: center;
-}
-
+  .contact-info {
+    display: flex;
+    justify-content: center;
+  }
 }
