--- a/portfolio/src/css/hamburger.css
+++ b/portfolio/src/css/hamburger.css
@@ -113,6 +113,7 @@
   display: flex;
   background-color: #ffff;
   text-decoration: none;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
 }
 
 
