--- a/portfolio/src/css/hamburger.css
+++ b/portfolio/src/css/hamburger.css
@@ -108,12 +108,12 @@
   position: absolute;
   display: flex;
   justify-content: center;
-  width: 150px;
+  width: 180px;
   height: 500px;
   display: flex;
   background-color: #ffff;
   text-decoration: none;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 0 0 15px 0;
 }
 
 
@@ -167,5 +167,7 @@
     display: flex;
     background-color: #ffff;
     text-decoration: none;
+    border-radius: 0px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
   }
 }
