--- a/portfolio/src/css/hamburger.css
+++ b/portfolio/src/css/hamburger.css
@@ -162,7 +162,8 @@
     position: absolute;
     display: flex;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
+    /* max-width: 100%; */
     height: 300px;
     display: flex;
     background-color: #ffff;
