--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -308,7 +308,7 @@ html {
 }
 
 .project-tabs {
-  width: 520px;
+  width: 100%;
 }
 
 .project-snippets {
@@ -318,8 +318,8 @@ html {
 }
 
 .project-snippet {
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   border-radius: 20px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
 }
@@ -365,24 +365,67 @@ html {
   margin: 0 25px;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1400px) {
   .portfolio-container {
     padding: 0 20px;
+  }
+
+  .project-tabs {
+    width: 100%;
   }
 
   .project-snippets {
     display: flex;
     flex-wrap: wrap;
     margin: 20px 0 40px 0;
-    /* justify-content: flex-start; */
+    justify-content: center;
   }
 
   .project-snippet {
     margin: 10px 0;
+
   }
+
+  .footer {
+    /* border: 1px solid red; */
+    flex-direction: column;
+    
+    /*    padding: 20px; */
+  }
+
+  
+  .footer-quote h1 {
+    text-align: center;
+  }
+
+  .contact-info {
+    
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 20px 0;
+    align-content: space-around;
+    margin: 0 auto;
+    width: 50%;
+  }
+  .social-media svg {
+    width: 80px;
+    height: 80px;
+    background-color: white;
+    text-align: right;
+    font-style: bold;
+    border-radius: 20px;
+  }
+  .social-media {
+    width: 80px;
+  height: 80px;
+  border-radius: 20px;
+  align-items: center;
+  margin: 0;
+  /* padding: 20px 0; */
+}
 }
 
-@media (max-width: 800px) {
+@media (max-width: 720px) {
 
   
    .App {
@@ -408,6 +451,8 @@ html {
   
 .project-tabs {
   width: 100%;
+  
+  /* padding: 20px; */
 }
 
 
@@ -456,41 +501,12 @@ html {
     width: 400px;
     margin: 0 auto;
   }
-
-  .footer {
-    /* border: 1px solid red; */
-    flex-direction: column;
-    width: 100%;
-  }
-
-  .footer-quote h1 {
-    text-align: center;
-  }
-
   .contact-info {
     width: 80%;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    padding: 20px 0;
-    align-content: space-around;
-    margin: 0 auto;
   }
-  .social-media svg {
-    width: 80px;
-    height: 80px;
-    background-color: white;
-    text-align: right;
-    font-style: bold;
-    border-radius: 20px;
-  }
-  .social-media {
-    width: 80px;
-  height: 80px;
-  border-radius: 20px;
-  align-items: center;
-  margin: 0;
-  /* padding: 20px 0; */
-}
+
+ 
+
 
 
 }
