--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -430,7 +430,7 @@ html {
   
    .App {
     width: 100%;
-    min-width: 480px;
+    /* min-width: 480px; */
     margin: 0 auto;
     /* display: flex; */
     /* width: 100%; */
