--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -137,6 +137,10 @@ html {
   font-size: 62.5%;
 }
 
+@viewport{
+  width: device-width;
+}
+
 .App {
   text-align: center;
   position: relative;
@@ -366,6 +370,9 @@ html {
 }
 
 @media (max-width: 1400px) {
+  @viewport {
+
+  }
   .portfolio-container {
     padding: 0 20px;
   }
@@ -429,7 +436,7 @@ html {
 
   
    .App {
-    width: 100%;
+    width: device-width;
     /* min-width: 480px; */
     margin: 0 auto;
     /* display: flex; */
