--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -137,9 +137,14 @@ html {
   font-size: 62.5%;
 }
 
-@viewport{
-  width: device-width;
+* { 
+  box-sizing: border-box;
+
 }
+
+/* @viewport{
+  width: device-width;
+} */
 
 .App {
   text-align: center;
@@ -296,7 +301,7 @@ html {
   line-height: 1.5;
   text-align: left;
   padding: 10px;
-  width: 400px;
+  width: 300px;
   font-style: italic;
   font-family: 'Lato Light', sans-serif;
 }
@@ -322,8 +327,8 @@ html {
 }
 
 .project-snippet {
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
   border-radius: 20px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
 }
@@ -370,9 +375,9 @@ html {
 }
 
 @media (max-width: 1400px) {
-  @viewport {
+  /* @viewport {
 
-  }
+  } */
   .portfolio-container {
     padding: 0 20px;
   }
