took out redundant divs and trying different stlying

--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -157,10 +157,10 @@ html {
   max-width: 1024px;
   margin: 0 auto;
 }
-
+/* 
 .header-view {
   width: 100%;
-}
+} */
 
 .headShot {
   left: 0px;
