--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -148,9 +148,7 @@ html {
 
 .App {
   text-align: center;
-  position: relative;
   width: 100%;
-  /* height: 60vh; */
 }
 
 .portfolio-container {
@@ -441,7 +439,7 @@ html {
 
   
    .App {
-    width: device-width;
+    width: 100%;
     /* min-width: 480px; */
     margin: 0 auto;
     /* display: flex; */
@@ -484,7 +482,7 @@ html {
 
   .experience-tabs {
     width: 100%;
-    min-width: 100%;
+    min-width: 0;
 
   }
 
