--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -440,6 +440,14 @@ html {
     
   } */
 
+  .headShot {
+    width: 100%;
+  }
+
+  .profile-name{
+    width: 100%;
+  }
+
   .parallax-container {
     width: 100%;
     margin: 0 auto;
@@ -457,28 +465,49 @@ html {
 
     /* padding: 20px; */
   }
+  .project-tabs h1{
+    width: 100%;
+    max-width: 200px;
+
+
+    /* padding: 20px; */
+  }
 
   .project-snippets {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 20px 0 40px 0;
+    width: 100%;
   }
 
   .each-project {
     justify-content: center;
     padding: 0;
+    width: 100%;
   }
 
   .project-snippet {
     margin: 10px 0;
-    width: 400px;
+    width: 100%;
     height: 400px;
+    max-width: 400px;
+    max-height: 400px;
+  }
+
+  .description{
+    width: 100%;
+    max-width: 400px; 
+    justify-content: center;
+    margin: 0 auto;
   }
 
   .experience-tabs {
     width: 100%;
     min-width: 0;
+  }
+  .experience-tabs h1{
+    width: 80%;
   }
 
   .role {
@@ -486,21 +515,24 @@ html {
     flex-direction: column;
     margin: 20px 0;
   }
-
-  .company-info-desc {
-    margin: 0 auto;
-    width: 400px;
-    /* text-align: justify; */
-  }
-
   .company-img {
-    width: 400px;
-    height: 400px;
+    width: 100%;
+    height: 400px !important;
+    max-width: 400px;
+    max-height: 400px;
     border-radius: 20px;
     box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2),
       0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
     margin: 0 0 10px 0;
   }
+  
+  .company-info-desc {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 400px;
+    /* text-align: justify; */
+  }
+
 
   .footer {
     margin: 0 auto;
