--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -490,7 +490,7 @@ html {
   .project-snippet {
     margin: 10px 0;
     width: 100%;
-    height: 400px;
+    height: auto;
     max-width: 400px;
     max-height: 400px;
   }
@@ -517,7 +517,7 @@ html {
   }
   .company-img {
     width: 100%;
-    height: 400px !important;
+    height: auto !important;
     max-width: 400px;
     max-height: 400px;
     border-radius: 20px;
@@ -542,11 +542,18 @@ html {
   .company-info {
     width: 400px;
     margin: 0 auto;
-  }
-  .contact-info {
     width: 80%;
   }
+
+  .social-media{
+    margin: 5px;
+  }
+  .social-media svg{
+    padding: 5px;
+  }
 }
+
+
 
 #loadOverlay {
   display: none;
