--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -335,7 +335,9 @@ html {
   display: flex;
   justify-content: center;
 }
-
+.footer-quote{
+  padding: 10px 0 0 0;
+}
 .footer-quote h1 {
   font-family: 'Lato Light', sans-serif;
   font-size: 1.5rem;
